# sphinx-badges

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  README.rst  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml
docs/: api_summary.rst  conf.py  index.rst  usage.rst
docs/_python/: datalib.py  mathlib.py  mylib.py
docs/api/: beta_class.rst  deprecated_helper.rst  experimental_module.rst  stable_function.rst
docs/modules/: api_summary.rst  auto_doc.rst  auto_summary.rst  manual.rst
src/sphinx_badges/: __init__.py  autodoc.py  collectors.py  directives.py  extension.py  nodes.py  roles.py
src/sphinx_badges/_static/: badge-filter.js  sphinx_badges.css
