[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-badges"
version = "0.1.0"
authors = [{ name="Nicholas Geneva" },]
description = "Bootstrap-style status badges for Sphinx documentation"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["sphinx", "documentation", "badges"]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "furo",
]
docs = [
    "furo",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_badges"]

[tool.hatch.build.targets.wheel.force-include]
"src/sphinx_badges/_static" = "sphinx_badges/_static"
