[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-badges"
version = "0.1.2"
authors = [{ name="Nicholas Geneva" },]
description = "Bootstrap-style status badges for Sphinx documentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["sphinx", "documentation", "badges"]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=5.0",
]

[project.optional-dependencies]
docs = [
    "shibuya",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "furo",
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_badges"]
